--- a/index.html
+++ b/index.html
@@ -64,57 +64,57 @@
             <li class="pick_wrap">
               <img id="shadow1" src="./images/top/shadow.png" />
               <img id="pick1" src="./images/top/1.png" />
-              <img id="name1" src="./images/top/_1.png" />
+              <img id="name1" src="./images/toptxt/_1.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow2" src="./images/top/shadow.png" />
               <img id="pick2" src="./images/top/2.png" />
-              <img id="name2" src="./images/top/_2.png" />
+              <img id="name2" src="./images/toptxt/_2.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow3" src="./images/top/shadow.png" />
               <img id="pick3" src="./images/top/3.png" />
-              <img id="name3" src="./images/top/_3.png" />
+              <img id="name3" src="./images/toptxt/_3.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow4" src="./images/top/shadow.png" />
               <img id="pick4" src="./images/top/4.png" />
-              <img id="name4" src="./images/top/_4.png" />
+              <img id="name4" src="./images/toptxt/_4.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow5" src="./images/top/shadow.png" />
               <img id="pick5" src="./images/top/5.png" />
-              <img id="name5" src="./images/top/_5.png" />
+              <img id="name5" src="./images/toptxt/_5.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow6" src="./images/top/shadow.png" />
               <img id="pick6" src="./images/top/6.png" />
-              <img id="name6" src="./images/top/_6.png" />
+              <img id="name6" src="./images/toptxt/_6.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow7" src="./images/top/shadow.png" />
               <img id="pick7" src="./images/top/7.png" />
-              <img id="name7" src="./images/top/_7.png" />
+              <img id="name7" src="./images/toptxt/_7.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow8" src="./images/top/shadow.png" />
               <img id="pick8" src="./images/top/8.png" />
-              <img id="name8" src="./images/top/_8.png" />
+              <img id="name8" src="./images/toptxt/_8.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow9" src="./images/top/shadow.png" />
               <img id="pick9" src="./images/top/9.png" />
-              <img id="name9" src="./images/top/_9.png" />
+              <img id="name9" src="./images/toptxt/_9.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow10" src="./images/top/shadow.png" />
               <img id="pick10" src="./images/top/10.png" />
-              <img id="name10" src="./images/top/_10.png" />
+              <img id="name10" src="./images/toptxt/_10.png" />
             </li>
             <li class="pick_wrap">
               <img id="shadow11" src="./images/top/shadow.png" />
               <img id="pick11" src="./images/top/11.png" />
-              <img id="name11" src="./images/top/_11.png" />
+              <img id="name11" src="./images/toptxt/_11.png" />
             </li>
           </ul>
         </div>
