--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="title">기존 작업 정리</div>
       <div class="term">1.깜빡임, 위아래 이동 모션</div>
       <!-- 빙수 -->
-      <div class="img_box">
+      <!--  <div class="img_box">
         <div class="top_motion">
           <ul class="snow_box">
             <li class="snow1">
@@ -118,8 +118,8 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div class="term">2. 공 튀기는 모션</div>
+      </div>-->
+      <div class="term">1. 공 튀기는 모션</div>
       <!-- 테니스 -->
       <div class="top_motion2">
         <ul>
@@ -133,12 +133,12 @@
           </li>
         </ul>
       </div>
-      <div class="term">3. 글씨쓰기</div>
+      <div class="term">2. 글씨쓰기</div>
       <!-- 글씨 쓰기 -->
       <div class="ttxt">
         <div class="txt-wrap"><img src="./images/txt.png" /></div>
       </div>
-      <div class="term">4. 회전</div>
+      <div class="term">3. 회전</div>
       <!-- LP -->
       <div class="img-box">
         <img src="./images/img_01.jpg" />
