--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- eventBox [S] -->
     <div class="eventBox">
       <div class="title">기존 작업 정리</div>
-      <div class="term">1.깜빡임, 위아래 이동 모션</div>
+      <!-- <div class="term">1.깜빡임, 위아래 이동 모션</div> -->
       <!-- 빙수 -->
       <!--  <div class="img_box">
         <div class="top_motion">
@@ -140,7 +140,7 @@
       </div>
       <div class="term">3. 회전</div>
       <!-- LP -->
-      <div class="img-box">
+      <div class="img-box lplp">
         <img src="./images/img_01.jpg" />
         <img class="lp-shadow" src="./images/lp-shadow.png" />
         <img class="lp" src="./images/lp.png" />
