--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
       <div class="term">3. 회전</div>
       <!-- LP -->
       <div class="img-box lplp">
-        <img src="./images/img_01.jpg" />
+        <img class="bgbg" src="./images/img_01.jpg" />
         <img class="lp-shadow" src="./images/lp-shadow.png" />
         <img class="lp" src="./images/lp.png" />
         <img class="lp-center" src="./images/lp_center.png" />
